Use `.setAttribute()` for QR code address parser

--- a/data/interfaces/default/mobile_devices_table.html
+++ b/data/interfaces/default/mobile_devices_table.html
@@ -70,7 +70,7 @@ DOCUMENTATION :: END
 
     function checkQRAddress(url) {
         var parser = document.createElement('a');
-        parser.href = url;
+        parser.setAttribute('href', url);
         var hostname = parser.hostname;
         var protocol = parser.protocol;
 
