Fix history table sorting by play duration

--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -84,7 +84,7 @@
                 <th align="left" id="started">Started</th>
                 <th align="left" id="paused_counter">Paused</th>
                 <th align="left" id="stopped">Stopped</th>
-                <th align="left" id="duration">Duration</th>
+                <th align="left" id="play_duration">Duration</th>
                 <th align="left" id="percent_complete"></th>
             </tr>
             </thead>
