--- a/data/interfaces/default/user.html
+++ b/data/interfaces/default/user.html
@@ -212,7 +212,7 @@ DOCUMENTATION :: END
                                                     <th align="left" id="started">Started</th>
                                                     <th align="left" id="paused_counter">Paused</th>
                                                     <th align="left" id="stopped">Stopped</th>
-                                                    <th align="left" id="duration">Duration</th>
+                                                    <th align="left" id="play_duration">Duration</th>
                                                     <th align="left" id="percent_complete"></th>
                                                 </tr>
                                             </thead>
