--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -798,6 +798,7 @@
             var guid = $(elem).data('guid');
             var live = $(elem).data('live');
             var library_art = $(elem).data('library_art');
+            var library_thumb = $(elem).data('library_thumb');
             var [height, fallback_poster, fallback_art] = [450, 'poster', 'art'];
             if ($.inArray(stat_id, ['top_music', 'popular_music']) > -1) {
                 [height, fallback_poster, fallback_art] = [300, 'cover', 'art'];
@@ -812,8 +813,8 @@
                 $('#stats-background-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', art || library_art, null, 500, 280, 40, '282828', 3, fallback_art) + ')');
                 $('#stats-thumb-' + stat_id).removeClass(function (index, className) {
                     return (className.match (/(^|\s)svg-icon library-\S+/g) || []).join(' ')});
-                if (thumb.startsWith('http')) {
-                    $('#stats-thumb-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', thumb, null, 300, 300, null, null, null, 'cover') + ')');
+                if (library_thumb.startsWith('http')) {
+                    $('#stats-thumb-' + stat_id).css('background-image', 'url(' + page('pms_image_proxy', library_thumb, null, 100, 100, null, null, null, 'cover') + ')');
                 } else {
                     $('#stats-thumb-' + stat_id).css('background-image', '')
                         .addClass('svg-icon library-' + library_type);
