--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -215,7 +215,7 @@
                 } else {
                     selected_user_id = val.join(",");
                 }
-                if (selected_user_id === graph_user_last_id) {
+                if (selected_user_id === history_user_last_id) {
                     return;
                 }
                 history_user_last_id = selected_user_id;
