made several changes mentioned in review

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -326,7 +326,8 @@
             'Live TV': '#19A0D7',
             'Direct Play': '#E5A00D',
             'Direct Stream': '#FFFFFF',
-            'Transcode': '#F06464'
+            'Transcode': '#F06464',
+            'Max. Concurrent Streams': '#1014FC'
         };
         var series_colors = [];
         $.each(data_series, function(index, series) {
