--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -327,7 +327,7 @@
             'Direct Play': '#E5A00D',
             'Direct Stream': '#FFFFFF',
             'Transcode': '#F06464',
-            'Max. Concurrent Streams': '#1014FC'
+            'Max. Concurrent Streams': '#96C83C'
         };
         var series_colors = [];
         $.each(data_series, function(index, series) {
